--- a/links.html
+++ b/links.html
@@ -11,13 +11,13 @@
       <h2>Creating Links</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
-        </ul>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a> </li>
+          <li><a href="syntax.html" title="HTML Syntax">HTML syntax</a> </li>
+          <li><a href="structure.html" title="Structuring Pages">Structuring pages</a> </li>
+          <li><a href="links.html" title="Links">Links</a> </li>
+          <li><a href="reference.html" title="HTML References">HTML reference</a> </li>
+          <li> <a href="next.html" title="Next Steps">Next steps</a> </li>
+        </ul> 
       </nav>
     </header>
     <main role="main">
@@ -168,7 +168,12 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p>CSUN 18111 Nordhoff St Northridge, CA 91330</p>
+       <p>
+        <a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a>
+        18111 Nordhoff St Northridge, CA 91330
+
+        <a href="https://x.com/csunorthridge?lang=en" target="_blank" title="CSUN Twitter"> follow us on Twitter</a>
+      </p>
     </footer>
   </body>
 </html>
