--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <h2>Introduction to HTML</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a> </li>
+          <li><a href="syntax.html" title="HTML Syntax">HTML syntax</a> </li>
+          <li><a href="structure.html" title="Structuring Pages">Structuring pages</a> </li>
+          <li><a href="links.html" title="Links">Links</a> </li>
+          <li><a href="reference.html" title="HTML References">HTML reference</a> </li>
+          <li> <a href="next.html" title="Next Steps">Next steps</a> </li>
         </ul>
       </nav>
     </header>
