--- a/reference.html
+++ b/reference.html
@@ -11,12 +11,12 @@
       <h2>HTML Reference</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a> </li>
+          <li><a href="syntax.html" title="HTML Syntax">HTML syntax</a> </li>
+          <li><a href="structure.html" title="Structuring Pages">Structuring pages</a> </li>
+          <li><a href="links.html" title="Links">Links</a> </li>
+          <li><a href="reference.html" title="HTML References">HTML reference</a> </li>
+          <li> <a href="next.html" title="Next Steps">Next steps</a> </li>
         </ul>
       </nav>
     </header>
@@ -25,7 +25,7 @@
         <header>
           <p>
             On this page you&rsquo;ll find a quick reference to common HTML
-            terms and a table of frequently used named character entities.
+            terms and a table of frequently used named <a href="#table" title="Common Named Character Entities">character entities.</a> 
           </p>
         </header>
         <section>
@@ -166,7 +166,7 @@
             summary="A quick reference of named character entities, including an example of the character, a description, and the entity code."
           >
             <caption>
-              <h3>Common Named Character Entities</h3>
+              <h3 id="table">Common Named Character Entities</h3>
             </caption>
             <tr>
               <th scope="col">Character</th>
