--- a/syntax.html
+++ b/syntax.html
@@ -11,12 +11,12 @@
       <h2>HTML Syntax</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a> </li>
+          <li><a href="syntax.html" title="HTML Syntax">HTML syntax</a> </li>
+          <li><a href="structure.html" title="Structuring Pages">Structuring pages</a> </li>
+          <li><a href="links.html" title="Links">Links</a> </li>
+          <li><a href="reference.html" title="HTML References">HTML reference</a> </li>
+          <li> <a href="next.html" title="Next Steps">Next steps</a> </li>
         </ul>
       </nav>
     </header>
@@ -220,9 +220,11 @@
             for example, you would type <strong>&amp;amp;</strong> in place of
             the actual ampersand. You can find named character entity lists
             within the HTML specifications, although the format for them can be
-            a bit hard to read. You can also find a useful list of character
-            entities on the HTML Reference page, and a more comprehensive list
-            on
+            a bit hard to read. 
+            <a href="reference.html#table" title="Common Named Character Entities">You can also find a useful list of character
+            entities on the HTML Reference page
+            </a>
+            , and a more comprehensive liston
             <a
               href="http://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references"
               title="Character entity reference"
